--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Game Scheduler v7.2 - Final Anti-Leak</title>
+    <title>Game Scheduler v7.3 - Iron Wall Filter</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         :root {
@@ -13,31 +13,38 @@
             --card-bg: rgba(30, 30, 30, 0.8);
         }
         body { font-family: 'Segoe UI', sans-serif; background: var(--bg-dark); color: #fff; margin: 0; padding: 20px; user-select: none; }
-        .container { max-width: 1400px; margin: auto; background: rgba(20, 20, 20, 0.9); padding: 30px; border-radius: 20px; border: 1px solid #333; }
+        .container { max-width: 1400px; margin: auto; background: rgba(20, 20, 20, 0.9); padding: 30px; border-radius: 20px; border: 1px solid #333; box-shadow: 0 20px 60px rgba(0,0,0,0.8); }
         h2 { text-align: center; color: #ffcc00; text-transform: uppercase; letter-spacing: 5px; margin-bottom: 25px; }
         .controls { text-align: center; margin-bottom: 30px; }
         button { background: var(--gold-grad); color: #000; border: none; padding: 12px 35px; cursor: pointer; border-radius: 50px; font-weight: 800; transition: 0.3s; }
         .btn-save { background: #27ae60 !important; color: #fff !important; display: none; margin-left: 10px; }
+        
+        /* Layout */
         .day-row { margin-bottom: 50px; border-bottom: 1px solid #333; padding-bottom: 30px; }
         .day-label { font-size: 24px; color: #ffcc00; font-weight: 900; margin-bottom: 20px; display: block; border-left: 5px solid #ffcc00; padding-left: 15px; }
         .session-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 15px; }
         .session-box { background: var(--card-bg); padding: 18px; border-radius: 12px; border: 1px solid #2a2a2a; }
+        .session-title { font-size: 11px; color: #ffcc00; font-weight: bold; margin-bottom: 10px; border-bottom: 1px solid #444; padding-bottom: 5px; }
+
+        /* Game & Badge */
         .game-card { background: #1a1a1a; padding: 8px 12px; border-radius: 6px; margin-bottom: 8px; display: flex; justify-content: space-between; align-items: center; border-left: 4px solid #444; }
         .game-name { font-size: 11px; font-weight: 600; color: #efefef; }
         .badge { font-size: 8px; padding: 2px 5px; border-radius: 4px; font-weight: 900; color: #000; text-transform: uppercase; }
         .badge-gold { background: var(--gold-grad) !important; }
         .badge-silver { background: var(--silver-grad) !important; }
         .badge-bronze { background: var(--bronze-grad) !important; color: #fff !important; }
-        .guide-container { margin-top: 15px; padding: 12px; background: rgba(0,0,0,0.4); border-radius: 8px; border: 1px solid #333; }
-        .dc-badge { font-size: 8px; padding: 2px 6px; border-radius: 3px; font-weight: bold; margin-bottom: 10px; display: inline-block; }
+
+        /* Strategy Guide */
+        .guide-container { margin-top: 15px; padding: 10px; background: rgba(0,0,0,0.4); border-radius: 8px; border: 1px solid #333; }
+        .step-row { font-size: 10px; color: #ddd; margin-bottom: 4px; border-bottom: 1px solid #222; padding-bottom: 3px; display: flex; justify-content: space-between; }
+        .dc-badge { font-size: 8px; padding: 2px 6px; border-radius: 3px; font-weight: bold; margin-bottom: 8px; display: inline-block; }
         .dc-on { background: #27ae60; color: white; }
         .dc-off { background: #c0392b; color: white; }
-        .step-row { font-size: 10px; color: #ddd; margin-bottom: 5px; border-bottom: 1px solid #222; padding-bottom: 3px; }
     </style>
 </head>
 <body>
 <div class="container">
-    <h2>🎰 GAME SCHEDULER V7.2</h2>
+    <h2>🎰 GAME SCHEDULER V7.3</h2>
     <div class="controls">
         <button id="genBtn" onclick="generateJadwal()" disabled>SINKRONISASI...</button>
         <button id="saveBtn" class="btn-save" onclick="downloadPNG()">DOWNLOAD PNG</button>
@@ -48,6 +55,8 @@
 <script>
 let database = { Pragmatic: { gold: [], silver: [], bronze: [] }, PGSoft: { gold: [], silver: [], bronze: [] } };
 let cloudGuides = { Pragmatic: [], PGSoft: [] };
+
+// LINK SPREADSHEET ANDA
 const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQYLkswRdyQIUIBvcS1-_D6AUqrvqVo9u13KJbMT7aNJXnG8v6wfNMYmivF96G2eHwiSm6I-K64-1qY/pub?output=csv";
 
 async function fetchDatabase() {
@@ -60,18 +69,18 @@ async function fetchDatabase() {
         cloudGuides = { Pragmatic: [], PGSoft: [] };
 
         lines.slice(1).forEach(line => {
-            // Logic Split untuk menjaga nama game utuh
+            // Regex Lookahead untuk menangani spasi/koma di dalam sel
             let cols = line.split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/);
-            if (cols && cols.length >= 3) {
+            if (cols.length >= 3) {
                 const prov = cols[0].replace(/"/g, '').trim(); 
                 const tier = cols[1].replace(/"/g, '').trim().toLowerCase(); 
                 const name = cols[2].replace(/"/g, '').trim();
 
                 if (name && name !== "undefined") {
                     if (tier === 'guide') {
-                        // Filter Ketat: Pastikan pola masuk ke provider yang benar
+                        // FILTER KETAT: Hanya masukkan jika provider sama persis
                         if (prov === 'Pragmatic') cloudGuides.Pragmatic.push(name);
-                        else if (prov === 'PGSoft') cloudGuides.PGSoft.push(name);
+                        if (prov === 'PGSoft') cloudGuides.PGSoft.push(name);
                     } else if (database[prov] && database[prov][tier]) {
                         database[prov][tier].push(name);
                     }
@@ -80,13 +89,13 @@ async function fetchDatabase() {
         });
         document.getElementById("genBtn").innerText = "GENERATE MASTER SCHEDULE";
         document.getElementById("genBtn").disabled = false;
-    } catch (e) { console.error(e); }
+    } catch (e) { document.getElementById("hasil").innerHTML = "<p style='color:red;'>Gagal Sinkronisasi!</p>"; }
 }
 window.onload = fetchDatabase;
 
 function getGuideBox(prov) {
     const list = [...cloudGuides[prov]];
-    if (list.length < 5) return `<div class="guide-container" style="font-size:9px;color:#666;text-align:center;">Pola Kurang (Min 5)</div>`;
+    if (list.length < 5) return `<div class="guide-container" style="font-size:9px;color:#666;text-align:center;">Lengkapi data guide ${prov} di Sheet (Min 5)</div>`;
     
     let dcHtml = "";
     if (prov === 'Pragmatic') {
@@ -102,6 +111,7 @@ function pick(p, t, bl, daily) {
     let pool = daily[p][t];
     let filtered = pool.filter(g => !bl.includes(g));
     if (filtered.length === 0) filtered = pool;
+    if (filtered.length === 0) return { name: "", html: "" };
     const res = filtered[Math.floor(Math.random() * filtered.length)];
     daily[p][t].splice(daily[p][t].indexOf(res), 1);
     return { name: res, html: `<div class="game-card border-${t}"><span class="game-name">${res}</span><span class="badge badge-${t}">${t}</span></div>` };
@@ -119,18 +129,19 @@ function generateJadwal() {
             return res.html;
         };
         html += `<div class="day-row"><span class="day-label">${day}</span><div class="session-grid">
-            <div class="session-box">MIDNIGHT<div style="display:flex; gap:10px; margin-top:10px;">
+            <div class="session-box"><div class="session-title">🌑 MIDNIGHT</div><div style="display:flex; gap:10px;">
                 <div style="flex:1;">P<br>${render('Pragmatic','gold')}${render('Pragmatic','silver')}${render('Pragmatic','bronze')}${getGuideBox('Pragmatic')}</div>
                 <div style="flex:1;">PG<br>${render('PGSoft','gold')}${render('PGSoft','silver')}${getGuideBox('PGSoft')}</div>
             </div></div>
-            <div class="session-box">SIANG<div style="display:flex; gap:10px; margin-top:10px;">
+            <div class="session-box"><div class="session-title">☀️ SIANG</div><div style="display:flex; gap:10px;">
                 <div style="flex:1;">P<br>${render('Pragmatic','gold')}${render('Pragmatic','silver')}${getGuideBox('Pragmatic')}</div>
-                <div style="flex:1;">PG<br>${render('PGSoft','gold')}${render('PGSoft','bronze')}${getGuideBox('PGSoft')}</div>
+                <div style="flex:1;">PG<br>${render('PGSoft','gold')}${render('PGSoft','silver')}${getGuideBox('PGSoft')}</div>
             </div></div>
-            <div class="session-box">SORE<div style="display:flex; gap:10px; margin-top:10px;">
+            <div class="session-box"><div class="session-title">🌇 SORE</div><div style="display:flex; gap:10px;">
                 <div style="flex:1;">P<br>${render('Pragmatic','gold')}${render('Pragmatic','gold')}${getGuideBox('Pragmatic')}</div>
+                <div style="flex:1;">PG<br>${render('PGSoft','gold')}${getGuideBox('PGSoft')}</div>
             </div></div>
-            <div class="session-box">MALAM<div style="display:flex; gap:10px; margin-top:10px;">
+            <div class="session-box"><div class="session-title">🌙 MALAM</div><div style="display:flex; gap:10px;">
                 <div style="flex:1;">PG<br>${render('PGSoft','gold')}${getGuideBox('PGSoft')}</div>
             </div></div>
         </div></div>`;
@@ -144,7 +155,7 @@ function downloadPNG() {
     html2canvas(document.getElementById("capture-area"), { scale: 2, backgroundColor: "#0a0a0a" }).then(canvas => {
         const a = document.createElement("a");
         a.href = canvas.toDataURL();
-        a.download = "Jadwal_Master.png";
+        a.download = "Jadwal_Master_V7.3.png";
         a.click();
     });
 }
