Upgrade Game Scheduler to version 8.0
Updated Game Scheduler from version 7.9 to 8.0 with full random session logic and improved session handling.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Game Scheduler v7.9 - Afternoon Variation</title>
+    <title>Game Scheduler v8.0 - Full Random Session</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         :root {
@@ -39,7 +39,7 @@
 </head>
 <body>
 <div class="container">
-    <h2>🎰 GAME SCHEDULER V7.9</h2>
+    <h2>🎰 GAME SCHEDULER V8.0</h2>
     <div class="controls">
         <button id="genBtn" onclick="generateJadwal()" disabled>SINKRONISASI...</button>
         <button id="saveBtn" class="btn-save" onclick="downloadPNG()">DOWNLOAD PNG</button>
@@ -154,24 +154,17 @@ function generateJadwal() {
             return res.html;
         };
 
-        // Logika Variasi Sesi Sore
+        // Logika Variasi SORE (Opsi 1: Mix P+PG | Opsi 2: 2 Game P)
         const isMixedSore = Math.random() > 0.5;
-        let soreContent = "";
+        let soreContent = isMixedSore ? 
+            `<div style="display:flex; gap:10px;"><div style="flex:1;">P<br>${draw('Pragmatic','gold')}${getStrategy('Pragmatic')}</div><div style="flex:1;">PG<br>${draw('PGSoft','gold')}${getStrategy('PGSoft')}</div></div>` :
+            `<div style="display:flex; gap:10px;"><div style="flex:1;">P<br>${draw('Pragmatic','gold')}${draw('Pragmatic','gold')}${getStrategy('Pragmatic')}</div></div>`;
 
-        if (isMixedSore) {
-            // Opsi 1: 1 Game PP & 1 Game PG
-            soreContent = `
-                <div style="display:flex; gap:10px;">
-                    <div style="flex:1;">P<br>${draw('Pragmatic','gold')}${getStrategy('Pragmatic')}</div>
-                    <div style="flex:1;">PG<br>${draw('PGSoft','gold')}${getStrategy('PGSoft')}</div>
-                </div>`;
-        } else {
-            // Opsi 2: 2 Game PP
-            soreContent = `
-                <div style="display:flex; gap:10px;">
-                    <div style="flex:1;">P<br>${draw('Pragmatic','gold')}${draw('Pragmatic','gold')}${getStrategy('Pragmatic')}</div>
-                </div>`;
-        }
+        // Logika Variasi MALAM (Opsi 1: 1 Game Pragmatic | Opsi 2: 1 Game PG Soft)
+        const isPragmaticMalam = Math.random() > 0.5;
+        let malamContent = isPragmaticMalam ?
+            `<div style="display:flex; gap:10px;"><div style="flex:1;">P<br>${draw('Pragmatic','gold')}${getStrategy('Pragmatic')}</div></div>` :
+            `<div style="display:flex; gap:10px;"><div style="flex:1;">PG<br>${draw('PGSoft','gold')}${getStrategy('PGSoft')}</div></div>`;
 
         html += `<div class="day-row"><span class="day-label">${day}</span><div class="session-grid">
             <div class="session-box"><div class="session-title">🌑 MIDNIGHT</div><div style="display:flex; gap:10px;">
@@ -183,9 +176,7 @@ function generateJadwal() {
                 <div style="flex:1;">PG<br>${draw('PGSoft','gold')}${draw('PGSoft','bronze')}${getStrategy('PGSoft')}</div>
             </div></div>
             <div class="session-box"><div class="session-title">🌇 SORE</div>${soreContent}</div>
-            <div class="session-box"><div class="session-title">🌙 MALAM</div><div style="display:flex; gap:10px;">
-                <div style="flex:1;">PG<br>${draw('PGSoft','gold')}${getStrategy('PGSoft')}</div>
-            </div></div>
+            <div class="session-box"><div class="session-title">🌙 MALAM</div>${malamContent}</div>
         </div></div>`;
         
         yesterdayGolds = [...todayGolds];
@@ -199,7 +190,7 @@ function downloadPNG() {
     html2canvas(document.getElementById("capture-area"), { scale: 2, backgroundColor: "#0a0a0a" }).then(canvas => {
         const a = document.createElement("a");
         a.href = canvas.toDataURL();
-        a.download = "Jadwal_V7.9_SoreVariasi.png";
+        a.download = "Jadwal_FullRandom_V8.0.png";
         a.click();
     });
 }
