--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             font-family: 'Inter', sans-serif; 
             margin: 0; padding: 20px;
             background-color: var(--bg-dark);
-            background-image: linear-gradient(rgba(0,0,0,0.88), rgba(0,0,0,0.88)), url('https://dataset.catgarong.com/assets/images/highlights/promo-highlight.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.88), rgba(0,0,0,0.88)), url('https://images.unsplash.com/photo-1513346940221-6f673d962e97?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bHV4dXJ5JTIwYmFja2dyb3VuZHxlbnwwfHwwfHx8MA%3D%3D');
             background-size: cover; background-position: center center; background-repeat: no-repeat; background-attachment: fixed;
             color: #fff; -webkit-font-smoothing: antialiased;
         }
@@ -331,3 +331,4 @@ window.onload = fetchDatabase;
 </script>
 </body>
 </html>
+
