--- a/index.html
+++ b/index.html
@@ -667,8 +667,8 @@ function getPattern(list, prov) {
         h += `<div class="pt-row" id="gid-${uid}"><span class="pt-txt">${s}</span><button class="del-btn-overlay" onclick="deleteItem('${uid}', event)">✕</button></div>`;
         txt += `> ${s}\n`;
     });
-    h += `<div style="text-align:center;font-size:9px;color:#888;margin-top:5px;">NAIKAN BET BERTAHAP</div></div>`;
-    txt += `NAIKAN BET BERTAHAP`;
+    h += `<div style="text-align:center;font-size:9px;color:#888;margin-top:5px;">NAIKAN BET BERTAHAP DAN ULANGI POLANYA</div></div>`;
+    txt += `NAIKAN BET BERTAHAP DAN ULANGI POLANYAP`;
     return {html:h, txt:txt};
 }
 
@@ -810,3 +810,4 @@ function initVisuals() {
 </script>
 </body>
 </html>
+
